<resources>
    <string name="app_name">FoodBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fab_camera">Camera</string>
    <string name="fab_gallery">Gallery</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">765111296968705</string>
    <string name="action_search">Search</string>

    <string name="upload_caption">Caption…</string>
    <string name="title_activity_photo_upload">Create a post</string>
    <string name="title_activity_select_map">Map</string>

    <string name="profile_name_display" formatted="false">%s  %s</string>
    <string name="title_activity_photo_selector">Create A Post</string>

    <string name="config_server">https://lenkyun.tk/foodhub</string>
    <string name="title_activity_image_cropper">ImageCropper</string>
    <string name="upload_successful">Upload success</string>
    <string name="upload_failed">Upload failed</string>
    <string name="error_connection">No connection to internet.</string>
    <string name="title_activity_photo_review">PhotoReviewActivity</string>
    <string name="title_activity_pick_location">PickLocationActivity</string>
    <string name="title_activity_search">searchActivity</string>

    <!--String related to register-->
    <string name="register">Register</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_name">Name</string>
    <string name="reg_lastname">Last Name</string>
    <string name="reg_submit">Submit</string>
    <string name="reg_cancel">Cancel</string>

    <!--String related to profile view-->
    <string name="profile_email">Email</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_unfollow">Unfollow</string>
    <string name="profile_name">Name</string>
    <string name="profile_edit">Edit</string>
    <string name="profile_email_example">test@test.com</string>
    <string name="profile_colon">:</string>

    <!--String related to my profile-->
    <string name="my_profile_save">Save</string>
    
    <!--String related to share-->
    <string name="share">Share</string>
    <string name="share_link">Link</string>
    <string name="share_by_app">By App</string>
    <string name="add_comment">Write a comment...</string>
</resources>
