<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profile_image"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:id="@+id/user_name"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:id="@+id/email_mssg"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_colon"
            android:id="@+id/colon"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_example"
            android:id="@+id/user_email"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/description"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:lines="5"
        android:text="Description My profile was create and post food " />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_follow"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>