<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:id="@+id/textView6"
        android:textSize="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="#18737277"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_link"
            android:id="@+id/textView8"
            android:textSize="20dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText5"
            android:text="http://link.1234.ddaa.com"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_by_app"
        android:id="@+id/textView7"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView"
            android:src="@drawable/common_google_signin_btn_icon_light_normal" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView3"
            android:src="@drawable/common_ic_googleplayservices" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView4"
            android:src="@drawable/common_plus_signin_btn_icon_dark_normal" />

    </LinearLayout>

</LinearLayout>